# finanz_analyse

./: .gitignore  LICENSE  README.md  history_AAPL.csv  history_EXW1.DE.csv  pyproject.toml  run.sh
finanz_analyse/: add.py  app.py  cache.py  config.py  main.py
finanz_analyse/api/: router.py
finanz_analyse/checking_accounts/: create_graph.py
finanz_analyse/data_loader/: finance_yahoo_adapter.py
finanz_analyse/load/: checking.py  depot.py  securities.py
finanz_analyse/ui/: chart_generation.py  depot.py  shared.py
finanz_analyse_skeleton/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
finanz_analyse_skeleton/src/: app.html
finanz_analyse_skeleton/src/client/: services.gen.ts  types.gen.ts
finanz_analyse_skeleton/src/lib/: 2019.js  Navigation.svelte
finanz_analyse_skeleton/src/routes/: +layout.svelte  +page.svelte
finanz_analyse_skeleton/src/routes/stocks/: +page.svelte
