[tool.poetry]
name = "finanz_analyse"
version = "0.1.0"
description = ""
authors = ["Michel Korfhage <korfhage.michel@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.38"
pandas = "^2.2.2"
requests-cache = "^1.2.0"
requests-ratelimiter = "^0.6.0"
scipy = "^1.13.0"
plotly = "^5.22.0"
panel = "^1.4.2"
langchain-community = "^0.2.0"
bokeh = "^3.4.1"
dash = "^2.17.1"
tables = "^3.10.1"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
app = "finanz_analyse.app:main"
add = "finanz_analyse.add:main"
test = "finanz_analyse.testing:main"
yfinance = "finanz_analyse.data_loader.finance_yahoo_adapter:main"
depot = "finanz_analyse.load.depot:load_depots"
depot_chart = "finanz_analyse.ui.depot:test"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
